<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.fragments.filters.genre.GenreDialogFragment">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="310dp"
        android:background="@drawable/divider_bg"
        android:layout_height="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            style="@style/BaseClickableText"
            android:layout_gravity="end"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_close"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/BaseClickableText"
                android:layout_marginEnd="@dimen/page_margin"
                android:layout_marginTop="@dimen/element_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/ic_close" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/manga_name"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_txt_20"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="430dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/genre_rv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_filter_rv"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingVertical="@dimen/medium_margin"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_drop_filter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/small_margin_2x"
            android:layout_marginStart="@dimen/page_margin_25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/drop"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="14sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_accept_filter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:layout_marginEnd="@dimen/page_margin_25"
            android:padding="14dp"
            app:cornerRadius="@dimen/small_margin_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/accept"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>